--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1210,7 +1210,7 @@ body.ie .ibg img {
 .form {
   width: 460px;
   background: #fff;
-  padding: 35px 20px;
+  padding: 20px 20px 10px 20px;
   margin: 0px 0px -35px 0px;
   border-radius: 10px;
   color: #333333;
@@ -1221,15 +1221,15 @@ body.ie .ibg img {
 }
 
 .form__title {
-  font-size: 20px;
-  color: #333333;
+  font-size: 44px;
+  color: #ff0000;
   text-align: center;
   font-family: "Geometria-Bold";
   line-height: 36px;
-  margin-bottom: 25px;
 }
 
 .form__subtitle {
+  text-align: center;
   font-size: 18px;
   color: #333333;
   font-family: "Geometria-Bold";
@@ -1296,7 +1296,7 @@ body.ie .ibg img {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin: 0px 0px 30px 0px;
+  margin-top:25px;
 }
 
 .form__num .input {
@@ -1360,6 +1360,7 @@ body.ie .ibg img {
   .form {
     width: 100%;
     padding: 25px 10px;
+    margin-top: 0;
   }
 
   .form__title {
@@ -1436,6 +1437,13 @@ body.ie .ibg img {
   padding: 0px 45px;
 }
 
+@media (max-width: 480px) {
+  .info__column {
+    margin: 0 0 10px 0;
+    padding: 0px 25px;
+  }
+}
+
 .info__photo {
   text-align: center;
   position: relative;
@@ -1459,6 +1467,12 @@ body.ie .ibg img {
   font-size: 24px;
   margin: 0px 0px 15px 0px;
   text-transform: uppercase;
+}
+
+@media (max-width: 480px) {
+  .info__label {
+    display: none;
+  }
 }
 
 .info__title {
@@ -1571,6 +1585,14 @@ body.ie .ibg img {
   margin: 100px 0px 50px 0px;
   text-transform: uppercase;
 }
+
+/*@media (max-width: 480px) {*/
+/*  .price__title {*/
+
+/*    margin: 0px 0px 0px 0px;*/
+
+/*  }*/
+/*}*/
 
 .price__row {
   display: -webkit-box;
@@ -1757,6 +1779,13 @@ body.ie .ibg img {
   max-width: 100%;
 }
 
+.order {
+  padding: 35px 15px;
+  background: url("../img/order/bg.jpg") 0 bottom/cover no-repeat;
+  position: relative;
+  margin: 50px 0 -50px 0;
+}
+
 @media (max-width: 767.98px) {
   .social__title {
     font-size: 45px;
@@ -1772,12 +1801,25 @@ body.ie .ibg img {
   .social__title {
     font-size: 40px;
   }
+
+  .order {
+    padding: 35px 15px;
+    background: url("../img/order/bg.jpg") 0 bottom/cover no-repeat;
+    position: relative;
+    margin: 0 0 -50px 0;
+  }
+
 }
 
-.order {
-  padding: 35px 15px;
-  background: url("../img/order/bg.jpg") 0 bottom/cover no-repeat;
-  position: relative;
+@media (max-width: 480px) {
+
+  .order {
+    padding: 35px 15px;
+    background: url("../img/order/bg.jpg") 0 bottom/cover no-repeat;
+    position: relative;
+    margin: 0 0 -50px 0;
+  }
+
 }
 
 .order__border {
