--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,11 +185,12 @@ body.lock {
   background: #ff0000;
   font-size: 18px;
   color: #fff;
-  font-family: "Geometria-Medium";
+  /*font-family: "Geometria-Medium";*/
   flex: 0 0 300px;
   height: 60px;
   border-radius: 40px;
   transition: all 0.3s;
+
 }
 
 .btn:hover {
@@ -498,7 +499,7 @@ body.ie .ibg img {
 
 @media (max-width: 479.98px) {
   .my-title {
-    font-size: 30px;
+    font-size: 25px;
   }
 }
 
@@ -1136,6 +1137,7 @@ body.ie .ibg img {
 
 .main__btn {
   margin: 0px 20px 0px 0px;
+  position: relative;
 }
 
 .main__label {
@@ -1191,7 +1193,7 @@ body.ie .ibg img {
 
 @media (max-width: 576px) {
   .main__title {
-    font-size: 36px;
+    font-size: 30px;
     margin: 0px 0px 20px 0px;
   }
 
@@ -1296,7 +1298,7 @@ body.ie .ibg img {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-top:25px;
+  margin-top: 25px;
 }
 
 .form__num .input {
@@ -1324,7 +1326,7 @@ body.ie .ibg img {
   transform: translateX(-4em) skewX(-45deg);
   animation: blick;
   animation-duration: 4s;
-  /*animation-delay: 3s;*/
+  animation-delay: 3.3s;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
 }
@@ -1437,13 +1439,6 @@ body.ie .ibg img {
   padding: 0px 45px;
 }
 
-@media (max-width: 480px) {
-  .info__column {
-    margin: 0 0 10px 0;
-    padding: 0px 25px;
-  }
-}
-
 .info__photo {
   text-align: center;
   position: relative;
@@ -1540,40 +1535,49 @@ body.ie .ibg img {
   }
 }
 
-@media (max-width: 479.98px) {
+@media (max-width: 480px) {
+
+  .info__column {
+    margin: 0 0 10px 0;
+    padding: 0px 25px;
+  }
+
   .info {
     padding: 40px 0 40px;
   }
 
-  .info__column {
-    margin: 0px 0px 30px 0px;
-  }
-
   .info__column:last-child {
+
     margin: 0px 0px 0px 0px;
   }
 
   .info__item {
-    padding: 20px 0px 20px 0px;
+    padding: 0px 0px 5px 0px;
   }
-
+  .info__item div {
+    padding: 0 0;
+  }
   .info__label {
     font-size: 20px;
   }
 
   .info__title {
-    font-size: 40px;
-    margin: 0px 0px 15px 0px;
+    font-size: 20px;
+    margin: 0px 0px 5px 0px;
   }
 
   .info__subtitle {
-    font-size: 24px;
+    font-size: 18px;
+  }
+  .info__subtitle span{
+    color: #EA0505;
   }
 
   .info__text {
-    font-size: 18px;
-    line-height: 26px;
+    font-size: 16px;
+    line-height: 22px;
   }
+
 }
 
 .price {
@@ -1586,13 +1590,6 @@ body.ie .ibg img {
   text-transform: uppercase;
 }
 
-/*@media (max-width: 480px) {*/
-/*  .price__title {*/
-
-/*    margin: 0px 0px 0px 0px;*/
-
-/*  }*/
-/*}*/
 
 .price__row {
   display: -webkit-box;
@@ -1680,7 +1677,11 @@ body.ie .ibg img {
   }
 }
 
-@media (max-width: 479.98px) {
+@media (max-width: 480px) {
+  .price__title {
+    margin: 100px 0px 20px 0px;
+  }
+
   .price__row {
     margin: 0px -15px;
   }
@@ -1872,7 +1873,7 @@ body.ie .ibg img {
 }
 
 .order__form-title {
-  font-size: 30px;
+  font-size: 25px;
   color: #fff;
   font-family: "Geometria-Bold";
   margin: 0px 0px 25px 0px;
@@ -2006,16 +2007,20 @@ body.ie .ibg img {
   }
 
   .order__text {
-    font-size: 26px;
+    font-size: 20px;
     line-height: 30px;
   }
 
   .order__form-title {
-    font-size: 26px;
+    font-size: 25px;
   }
 
   .order__border {
     padding: 40px 0px;
+  }
+
+  .order__column {
+    margin: 0px 0px 15px 0px;
   }
 }
 
@@ -2131,7 +2136,7 @@ body.ie .ibg img {
 
 @media (max-width: 576px) {
   .why {
-    padding: 70px 0px 0px;
+    padding: 0px 0px 0px;
   }
 
   .why__title {
@@ -2271,7 +2276,7 @@ body.ie .ibg img {
 
   .projects__btn {
     max-width: 100%;
-    margin: 0px 0px 20px 0px;
+    margin: 0px 0px 0px 0px;
   }
 }
 
@@ -2313,6 +2318,15 @@ body.ie .ibg img {
 }
 
 @media (max-width: 576px) {
+  .projects__column:nth-child(2) {
+margin: 0 0 0 0;
+  }
+  .projects-info-block:first-child {
+   display: none;
+  }
+  .projects-info-block:last-child {
+   display: none;
+  }
 
   .projects-info-block__icon {
     margin: 0px 10px 0px 0px;
@@ -2322,7 +2336,9 @@ body.ie .ibg img {
     font-size: 16px;
     max-width: 100%;
   }
-
+  .projects__btn_white {
+  display: none;
+  }
 }
 
 .projects-info-block__text span {
@@ -2396,6 +2412,13 @@ body.ie .ibg img {
   .questions {
     padding: 0px 0px 80px 0px;
   }
+}
+
+@media (max-width: 480px) {
+  .projects__info-item {
+   display: none;
+  }
+
 }
 
 .spollers {
